# umbara

./: .editorconfig  .gitignore  AUTHORS  LICENSE  README.md  manage.py  pyproject.toml  reviewer.sqlite3  setup.cfg
.github/: dependabot.yml
.github/workflow/: codeql.yml  test.yml
.github/workflows/: codeql.yml  test.yml
config/: .env.template
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
server/: endpoints.py  urls.py
server/apps/about/: apps.py  urls.py  views.py
server/apps/catalog/: admin.py  apps.py  constants.py  forms.py  urls.py  views.py
server/apps/catalog/migrations/: 0001_initial.py  0002_normalize.py  0003_localization.py  0004_change_table_name.py  0005_images.py  0006_rename_images.py  0007_image_mixin.py  0008_is_on_main.py  0009_add_many_images.py  0010_datetime.py  (+1 more)
server/apps/core/: apps.py  base_models.py  constances.py  constants.py  converters.py  fields.py  middleware.py  normalize.py  pagination.py  validators.py  widgets.py
server/apps/feedback/: admin.py  apps.py  constants.py  fields.py  forms.py  models.py  urls.py  views.py
server/apps/homepage/: apps.py  urls.py  views.py
server/apps/users/: admin.py  apps.py  backend.py  constants.py  fields.py  forms.py  jwt.py  models.py  service.py  signals.py  urls.py
server/settings/components/: __init__.py  common.py  csp.py
server/settings/environments/: development.py
server/templates/: 404.html  base.html  cat.html  footer.html  nav.html  table_products.html
server/templates/about/: index.html
server/templates/catalog/: details.html  products.html  sections.html  table_products.html
server/templates/feedback/: feedback.html
server/templates/homepage/: index.html
server/templates/txt/: humans.txt
server/templates/users/: profile.html  user_detail.html  user_list.html
static/catalog/css/: details.css
tests/: conftest.py
tests/fixtures/apps/: about.py  catalog.py  endpoints.py  homepage.py
tests/strategies/: catalog.py  feedback.py  user.py
tests/test_apps/test_core/: test_validators.py
tests/test_server/: test_urls.py
(+59 files in other folders)
