[tool.poetry]
name = "umbara"
description = "Umbara Project"
version = "0.1.0"
readme = "README.md"
authors = ["umbaraapp.com"]


[tool.poetry.dependencies]
python = "^3.11.1"

django = { version = "^3.2.17", extras = ["argon2"] }
django-split-settings = "^1.2"
django-axes = "^5.40"
django-csp = "^3.7"
django-health-check = "^3.16"
django-http-referrer-policy = "^1.1"
django-permissions-policy = "^4.14"
django-stubs-ext = "^0.7"
django-cleanup = "^7.0.0"
sorl-thumbnail = "^12.9.0"
django-ckeditor = "^6.5.1"
whitenoise = "^6.4.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5  = "^0.7"

PyJWT = "^2.6.0"
Pillow = "^9.4.0"
gunicorn = "^20.0"
python-decouple = "^3.6"
structlog = "^22.3"
GitPython = "^3.1.30"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.6"
django-querycount = "^0.7"
django-migration-linter = "^4.1"
django-extra-checks = "^0.12"
nplusone = "^1.0"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
flake8-django = "^1.1"
flake8-logging-format = "^0.7"
nitpick = "^0.32"

pytest = "^7.1"
pytest-django = "^4.5"
pytest-cov = "^4.0"
django-coverage-plugin = "^2.0"
pytest-randomly = "^3.12"
pytest-timeout = "^2.1"
django-test-migrations = "^1.2"
hypothesis = "^6.78"
mock = "^5.0.1"
freezegun = "^1.2.2"

mypy = "^1.0.1"
django-stubs = { version = "^1.15", extras = ["compatible-mypy"] }

yamllint = "^1.27"
safety = "^2.1"
dotenv-linter = "^0.4"
polint = "^0.4"
dennis = "^1.1"
dump-env = "^1.3"
requests-cache = "^0.9.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = [
    "VERSION",
    "setup.py",
    "pyproject.toml:version"
]
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
annotated_tag = true

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/0.17.0/styles/nitpick-style-wemake.toml"
